fixed dark mode, fixed multiple suggestions handling, started working on saving the history

--- a/Ogra/style.css
+++ b/Ogra/style.css
@@ -29,10 +29,7 @@ body {
     justify-content: flex-start;
     gap: 80px;
 }
-html.dark-mode
-{
-    filter: invert(1) hue-rotate(180deg);
-}
+
 .dark-check, .how-to
 {
     position: absolute;
@@ -200,7 +197,7 @@ body.choose h1
 {
     width: 80%;
     /* color: ; */
-    filter:drop-shadow( 5px -2px 0 #f2890867);
+    filter:drop-shadow( 5px -2px 0 #f2890867) ;
 }
 .type-card .img.tomnaya img
 {
@@ -208,7 +205,7 @@ body.choose h1
 }
 .type-card.active .img img
 {
-    filter:drop-shadow( 5px -2px 0 #006a2a67);
+    filter:drop-shadow( 5px -2px 0 #006a2a67) !important;
 }
 .type-card h2
 {
@@ -267,6 +264,7 @@ body.choose h1
     bottom: 10px;
     background-color: #006A2A !important;
     color: #ffeed3 !important;
+    font-weight: bold;
 }
 .select:hover
 {
@@ -276,4 +274,43 @@ body.choose h1
 {
     background-color: #80808063  !important;
     pointer-events: none !important;
+}
+
+
+
+
+/* dark mode */
+html.dark-mode body
+{
+    /* backdrop-filter: grayscale(1); */
+    background: #1d1d1d;
+    /* background-image:  linear-gradient(to bottom, transparent -300%, #1d1d1d),url("/Ogra/images/bills/image2.png"); */
+}
+html.dark-mode .layer1
+{
+    background: #2c2c2c;
+}
+html.dark-mode .layer2
+{
+    background: #373737 ;
+}
+html.dark-mode .button
+{
+    background-color: #2c2c2c !important;
+    color: #E2E2E2 !important;
+}
+html.dark-mode .button:hover, html.dark-mode .button.active
+{
+    
+    border: 4px solid #006A2A;
+        background-image: url("/Ogra/images/bills/image.png"); 
+    background-size: cover;
+    color: #ffeed3 !important;
+}
+
+
+html.dark-mode .type-card .img img
+{
+    
+    filter:drop-shadow( 5px -2px 0 #b9b9b925);
 }
