--- a/Ogra/trip.css
+++ b/Ogra/trip.css
@@ -35,10 +35,10 @@ body.trip {
     background-image:  linear-gradient(to bottom, transparent -300%, #ffeed3),url("/Ogra/images/bills/image2.png");
     background-size: contain;
 }
-html.dark-mode
+/* html.dark-mode
 {
     filter: invert(1) hue-rotate(180deg);
-}
+} */
 
 .seats-container{
     display: grid;
@@ -50,7 +50,7 @@ html.dark-mode
 
 .card-seat.add {
     background-color: transparent !important;
-    border: 2px dotted #ccc;
+    border: 2px dashed #ccc;
     color: black;
     opacity: 0.6;
     position: relative;
@@ -82,6 +82,7 @@ html.dark-mode
     background-color: #FEDB97;
     
 }
+
 .down-icon
 {
     display: flex;
@@ -448,14 +449,21 @@ h1 {
     border: 2px solid #FEAA23;
     cursor: pointer;
 }
-.card-seat.disabled {
+.card-seat.disabled
+{
+    border: 3px solid #ccc;
+    color: transparent;
+    background-color: transparent;
+}
+.card-seat.driver {
     background-color: transparent !important;
     border: 3px solid red;
     color: #ffeed3;;
     opacity: 0.6;
     position: relative;
+    
 }
-.card-seat.disabled::after {
+.card-seat.driver::after {
     content: "X";
     color: red;
     font-size: 2em;
@@ -465,10 +473,16 @@ h1 {
     transform: translate(-50%, -50%);
     pointer-events: none;
 }
+
 .suggested {
-    background-color: #ffeed3 !important; /* Light yellow */
-    border: 2px dashed orange;
+    background-color: transparent !important; /* Light yellow */
+    border: 2px dashed orange !important;
     color: orange;
+    /* position: absolute; */
+    height: auto;
+    min-height: 60px;
+    /* z-index: 2; */
+    box-shadow: #E47902 0px 0px 10px;
 }
 /* make a beating animation for the suggested div */
 .suggested {
@@ -701,3 +715,68 @@ transition: 0.1s linear; }
     width: calc(100% - 60px);
     font-size: 13px !important;
 }
+
+
+/* dark mode */
+
+html.dark-mode body
+{
+    /* backdrop-filter: grayscale(1); */
+    background: #1d1d1d;
+    /* background-image:  linear-gradient(to bottom, transparent -300%, #1d1d1d),url("/Ogra/images/bills/image2.png"); */
+}
+html.dark-mode *
+{
+    color: #ccc;
+    
+}
+html.dark-mode .primary, .primary *
+{
+    color: #006A2A !important;
+}
+html.dark-mode .layer1
+{
+    background: #2c2c2c;
+}
+html.dark-mode .layer2
+{
+    background: #373737 ;
+}
+html.dark-mode .down-icon
+{
+    filter: invert(1);
+}
+html.dark-mode input
+{
+    
+    border: 3px solid #006A2A;
+
+}
+html.dark-mode  .card-seat.selected
+{
+    border: 3px solid #006A2A;
+}
+html.dark-mode .content .header span
+{
+    background-color: #006A2A;
+}
+
+/* html.dark-mode .button
+{
+    background-color: #2c2c2c !important;
+    color: #E2E2E2 !important;
+}
+html.dark-mode .button:hover, html.dark-mode .button.active
+{
+    
+    border: 4px solid #006A2A;
+        background-image: url("/Ogra/images/bills/image.png"); 
+    background-size: cover;
+    color: #ffeed3 !important;
+}
+
+html.dark-mode .type-card .img img
+{
+    
+    filter:drop-shadow( 5px -2px 0 #b9b9b925);
+} */
